--- a/package.json
+++ b/package.json
@@ -16,6 +16,7 @@
     "autoprefixer": "10.4.14",
     "eslint": "8.45.0",
     "eslint-config-next": "13.4.10",
+    "immer": "^10.0.2",
     "next": "13.4.10",
     "postcss": "8.4.26",
     "react": "18.2.0",
